--- a/tmpl/.sops.yaml
+++ b/tmpl/.sops.yaml
@@ -3,9 +3,9 @@ creation_rules:
   - path_regex: provision/.*\.sops\.ya?ml
     unencrypted_regex: "^(kind)$"
     pgp: >-
-      28FAE7DBB9F187A6D1956F6150163F0A471743F3
+      ${BOOTSTRAP_PERSONAL_KEY_FP}
   - path_regex: cluster/.*\.ya?ml
     encrypted_regex: "^(data|stringData)$"
     pgp: >-
-      297FED771E7CCA73A7E36A8DCB445BC561D54D26,
-      28FAE7DBB9F187A6D1956F6150163F0A471743F3
+      ${BOOTSTRAP_FLUX_KEY_FP},
+      ${BOOTSTRAP_PERSONAL_KEY_FP}
