--- a/tmpl/cluster/gotk-sync.yaml
+++ b/tmpl/cluster/gotk-sync.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  url: https://github.com/jp83/home-cluster
+  url: ${BOOTSTRAP_GIT_REPOSITORY}
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
