--- a/tmpl/cluster/kube-vip-daemonset.yaml
+++ b/tmpl/cluster/kube-vip-daemonset.yaml
@@ -28,7 +28,7 @@ spec:
             - name: vip_arp
               value: "true"
             - name: vip_interface
-              value: "ens192"
+              value: "${BOOTSTRAP_ANSIBLE_KUBE_VIP_INTERFACE}"
             - name: port
               value: "6443"
             - name: vip_cidr
@@ -40,7 +40,7 @@ spec:
             - name: svc_enable
               value: "false"
             - name: vip_address
-              value: "192.168.2.179"
+              value: "${BOOTSTRAP_ANSIBLE_KUBE_VIP_ADDRESS}"
           securityContext:
             capabilities:
               add:
