Revert "try commenting out vip_interface to find default" - didn't work
This reverts commit ae0fd010b4d6951c3fe77a1514121671a3566a0f.

--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -54,7 +54,6 @@ spec:
       hostNetwork: true
       nodeSelector:
         node-role.kubernetes.io/master: "true"
-#        hp_t630_thinclient: "true"
       serviceAccountName: kube-vip
       tolerations:
         - key: node-role.kubernetes.io/master
@@ -90,8 +89,8 @@ spec:
           env:
             - name: vip_arp
               value: "true"
-#            - name: vip_interface
-#              value: "enp1s0"
+            - name: vip_interface
+              value: "enp1s0"
             - name: port
               value: "6443"
             - name: vip_cidr
