add k3s-1 (t630) master host

--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -4,6 +4,8 @@ kubernetes:
       hosts:
         k8s-0:
           ansible_host: 192.168.2.86
+        k3s-1:
+          ansible_host: 192.168.2.77
     worker:
       hosts:
         k8s-1:
