--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -2,11 +2,17 @@ kubernetes:
   children:
     master:
       hosts:
-        k8s-0:
+        k3s-master-0:
+          ansible_host: 192.168.2.85
+        k3s-master-1:
           ansible_host: 192.168.2.86
-        k3s-1:
+        k3s-master-2:
           ansible_host: 192.168.2.77
     worker:
       hosts:
-        k8s-1:
+        k3s-node-1:
           ansible_host: 192.168.2.87
+        k3s-node-2:
+          ansible_host: 192.168.2.75
+        k3s-node-3:
+          ansible_host: 192.168.2.76
