--- a/cluster/apps/kube-system/node-feature-discovery/kustomization.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/kustomization.yaml
@@ -2,6 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - metrics-server
-  - node-feature-discovery
-  - reloader
+  - helm-release.yaml
