--- a/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
@@ -37,6 +37,7 @@ spec:
         sources:
           usb:
             deviceClassWhitelist:
+              - "00"
               - "02"
               - "03"
               - "0e"
@@ -51,9 +52,15 @@ spec:
             - name: zwave
               matchOn:
                 - usbId:
-                    class: ["02"]
-                    vendor: ["0658"]
-                    device: ["0200"]
+                    #class: ["02"]
+                    vendor: ["10c4"]
+                    #device: ["0200"]
+            - name: rtl-sdr
+              matchOn:
+                - usbId:
+                    #class: ["02"]
+                    vendor: ["0bda"]
+                    device: ["2838"]
             - name: intel-gpu
               matchOn:
                 - pciId:
