--- a/cluster/apps/networking/traefik/external/blueiris.yaml
+++ b/cluster/apps/networking/traefik/external/blueiris.yaml
@@ -10,19 +10,25 @@ spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - *host
+        - blueiris.${SECRET_DOMAIN}
+      #secretName: external-blueiris-tls
   rules:
   - host: blueiris.${SECRET_DOMAIN}
     http:
       paths:
-      - backend:
-          serviceName: external-blueiris
-          servicePort: 81
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: external-blueiris
+            port:
+              number: 81
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: external-blueiris
+  namespace: networking
 spec:
   ports:
   - name: http
