--- a/cluster/apps/networking/traefik/external/blueiris.yaml
+++ b/cluster/apps/networking/traefik/external/blueiris.yaml
@@ -4,8 +4,8 @@ metadata:
   name: external-blueiris
   namespace: networking
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+#    cert-manager.io/cluster-issuer: "letsencrypt-production"
+#    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
   ingressClassName: "traefik"
   tls:
