--- a/cluster/apps/networking/traefik/middlewares/kustomization.yaml
+++ b/cluster/apps/networking/traefik/middlewares/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-#  - cstor-pool.yaml
-#  - storageclass.yaml
+  - cloudflare-only.yaml
+  - internal-only.yaml
