use age instead of gpg for sops

--- a/cluster/core/cert-manager/secret.sops.yaml
+++ b/cluster/core/cert-manager/secret.sops.yaml
@@ -5,57 +5,24 @@ metadata:
     name: cloudflare-api-key
     namespace: cert-manager
 stringData:
-    api-key: ENC[AES256_GCM,data:1vC1gJoQlzUcxtxsbhjb5MCOax9cEWzi/wzsVOtGQOKnVYFaGg==,iv:Ww/GFyOe5i7gh40QZjAtbhazFd9FcYNdqPsDzPD17r4=,tag:9ysEoI48XF/62zC37FYagQ==,type:str]
+    api-key: ENC[AES256_GCM,data:0GS59t5DPRkExTQWzmyiu4iIoPUnrPAIwqiZNfOO3nlOKSmyuQ==,iv:ne6VljlLe2mxrR/juHiRXsraxus/lFoele0lbmeCYjU=,tag:GX7DXaXcxiA7wULLrjLedw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
-    age: []
-    lastmodified: "2021-10-23T01:29:42Z"
-    mac: ENC[AES256_GCM,data:xT6AtXiUlISNenBFYIQJVXvZrNESm4Rtd5zMKxTgFUANBlbRt0L/fIkX30pVb66uYjK/3eFr11aeu8RmX8QaJKgHM9nWJJ1m61N+AR3miypPJrkKrZ4ZJGdozSkGgAqel/ZrEHMSQX2hck472Z/02CToEtxEQG713htYJoMZjMU=,iv:ncvCvNfzqye+H3HJE+pj6IPrlbwZk5X3qfxKqbJsPxI=,tag:6dYmB+ui8pI1R64HehFodw==,type:str]
-    pgp:
-        - created_at: "2021-10-23T01:29:41Z"
+    age:
+        - recipient: age1xcngmepv707dkgxnl4uj0heupajdfuturgv7q7fd5jvkar9zsv5sgrvc3r
           enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMA3xUwhrNurfkAQ/+OgSgNXTHfQyQ3Qgxq/rFsI+arzWqkYnf7xpy8NWDF5X9
-            +F9IMPXmhFtSi4Prb1q9H45nT9dNqJ5569KhIWphDuW9uc6q9z9HhwwLFA4WOayq
-            X0OEAdSZSQ/ISajJJCyd617N46HacPvG6SLhPDetIX4j7YPh0rNLzAJyF+muLEBg
-            pKPAlr9M/HP8MMxmooGVr+MRA2trVAWIw9cGb/3Ii7y/1viJtQcBi6vJEpUv4xel
-            NFCWk31cMDQT1jAjXO3rRl5jm+aHkAjUj8UU4Iuk/N8YBjaincHa+lCIckS6oFLh
-            34MBpjbZOorjaS7ud4T2W+rjTvzYpzPOk1d9+xQi5IrjdgqkI2R7ccCZ32HimtZE
-            FpxQQTxMuEQiWl6BEYLR3VWLKS+jJxJxd+tFZuLASQRsmvq0P97X+j3L9FUOFSCb
-            1fxQjyZ0ELxasb6OUlAZrX133NwMMqXfxRFpJUZXm1nkwTYiBWxKQ/9HaYjuIpV8
-            EqoipCE3ldNbbJ+y97QAxHdSmD3LLU+MdTyoZZ9rgtAQ8OBTy352tVnJL/bcIaML
-            OnuFYipATGS+0XmiytGUGi+d4IPfclaXemiYpiA7TtA1uO1nu3INYRvMl2jM+8v2
-            KwpSZ2hAORcHEcxlr6v15gPYBk9wJc27luVr63/IoUfhseFfR/erUlOLTG7hFdXU
-            aAEJAhUSu68dDBShfRn/XkboadMmnxOZgHoa45fSNm5eGb+ER1Y7HgPD8QWR5/OE
-            a8ooXgKG69/D1Sr4Z7tPpcvoBjcQqaL98FkNuHSPBfMI2A3NaNH5h2dIVV8Syy5a
-            Cu7qyv33k3dG
-            =1rQd
-            -----END PGP MESSAGE-----
-          fp: 297FED771E7CCA73A7E36A8DCB445BC561D54D26
-        - created_at: "2021-10-23T01:29:41Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMA9ce7oIX8WL2AQ/9EDslRpGqGRcmQZ3FOuAPU5RhsEVF4a/m530wo2Ma+RmB
-            MAzt7HKr0gClOdJlJ1AQVUgtjacJ0I8skdGpW1dhDcQxK4LuVTUnUC8liNIacIh9
-            xg+tndOfZ8g1Efh1JDmBC/Y13ktoT3M4t+wdHTC9oHp4PYpzIkprhbEIPpivqREc
-            oEIwp/TXhVV4Zpc1TNyQNLg8n5OceFN5UZeuq0FmqajkDbdhnbGrZeA3yHO463QH
-            f05bVyiv7KQjHAN6canJb+XZRNKayAspGECG8Hl1wGFVSqYX4RNxQRNX3j6oRzAJ
-            R5ksCmToqXu+AdZJ2kL8TtXT+rEHAng7BIOVY+BJumXCMJDBnYFhfDNe8syQEk0D
-            EwhW8Rulm1LGS1Eow/N6aBrx2wklsYfIHqAIS9NDfcrFOTevGfJyQRgaQJF4s/zq
-            c8EFXuzL/T/AO2VMudKnJA6FSKvQHszDk1BjOsO3VyaqVES47jCYaO2TEjMjHXgU
-            G0dJflyrq0ElpP9fgoYI4U//rvkb0pZ9BJR2MQSVZrQs3kWi0Ey4nt4KOFY0t3YL
-            k7idIrsZq8hMvXS8Qmc7ssg+vai90ZLhMxpZlnJHI0Wq+TBcePb3BRRCpjoMAxfC
-            yT5qNXFLWlvz0cEDvaf9YK+EJH5am59WuBvObdHGCapsDokamrmn0I6YmzhA31LU
-            aAEJAhVKKmdHysCLoIPzAksIo0KY8bntu7KIIfBNFW+rMFGU7Lqi5prlSkOk56Mb
-            1FuqYJjjQnUDVQ96oKk+0BZkCx0O1/EEnom+AVNGcxM+bYSOOWvMoRKFaq8tQ4zX
-            pU97kOdcjmWZ
-            =QqBy
-            -----END PGP MESSAGE-----
-          fp: 28FAE7DBB9F187A6D1956F6150163F0A471743F3
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhWHYyNmh5cW1DVzVsazRw
+            SkpGLzJvVzNudzh3clYvMHZKOXU3dG0yb3l3CjVBV3dwSlVPcGpiNEw0M2poQUxY
+            RkJqNDZWM25oc2Vka0Z3MFo1UzlhR28KLS0tIGtaZXRpL1Uwd1hldFJjUGxTTTZu
+            UDZ6YTBOb2ltT2lNTzJxUzFBWUVxeXMK2bO0I1cpUK/nSH0E48mciSdrgw4V9qAd
+            qFJllHDtZEO9nYl3kt1CLQ1EFGo0ANoLqBnGwqj1Zp6RIJxF+fM8aw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-05-10T23:46:38Z"
+    mac: ENC[AES256_GCM,data:1QdrEkBcp08F8gGIQujuzGpE+UA0L6c6yZIMbbJQ/0RHawhkn0jJFl/8ZPyJIBUVyjxEbUV0Ugj4L33PmMwTUCQ3/+0P5HobsThftbXeId4A7Lu04jsroA7QKTYFOBlNCHJkWph6gWRm+v8Z3iHX627MAdAtw8zxDWpcexU6kFk=,iv:pzk46nbXJPj4ENYsJOhUzpw5KXxnHLsz6up7gY19cKw=,tag:I6luRppCbH0opn/TrfYIsw==,type:str]
+    pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
