--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,58 +5,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:yAX6ot9XTtGN0LhPBFPA5HGuWqUn4g==,iv:HBGzmHZV8lVdh9TXlrFANb2Yf6Rf+ApuoNN9WUm3uVU=,tag:qEnxnJOpm6VCgnO8Wvs6aQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:cO/VF0ZXD/EkDw/NeYMkNlOR5cOt873y,iv:ApC/mvyGzVrJNGdU0jH++ZbbMjaWEpzFiLDVfrg/84M=,tag:ms68t9vZ/2yLohhPWOetkg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
-    age: []
-    lastmodified: "2021-10-23T01:29:41Z"
-    mac: ENC[AES256_GCM,data:fhncnoQUusGCuXtM7UuSRTv0laIuouG8vy3F7v++17R389DwZo3IGuWe9H8yiTCwci8OF3tj1HqF/2APQu1SilPecGLG4tBp3axLeWwPKzxFsPn5pybj0gtyOG1fx+QCkObDV1ohyiaITxPaQXnU0MsszMmmZv6WLSOQ0xhZXBg=,iv:6JwDr6oKlCFeOfUgqtE5pi/cIiPSM8OEmXN2PZt4xKE=,tag:orwcbrSG37uEv7qVIre4nQ==,type:str]
-    pgp:
-        - created_at: "2021-10-23T01:29:40Z"
+    age:
+        - recipient: age1xcngmepv707dkgxnl4uj0heupajdfuturgv7q7fd5jvkar9zsv5sgrvc3r
           enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMA3xUwhrNurfkAQ//avrYg2rtDeDw7bS/nM9LsEk548ZLy6pMTWYZ3nne4ttB
-            hPJ7NKeNzom0qb0goIQMm79WuCrRksDxZwNCibDdUmhmU1tZpMZk+h7POTwZQG+y
-            gJqYm0+hWvBzIjSeBaxW07rjpetd4Q4ELKdXgmZuP8X0hlD6z5uyEzV14ophoWCK
-            7jpf7v9iEzSLqOdJPR6qnVDnp5OJllG3cZPBZzUpz2/LK3A/74nNNmL2Zya4BmKG
-            yCPP7duOUaZDYttjHkI+Fnzty9p8S3mC2VCrFQlpFERP/0C771NLG8NbAL74vhTb
-            XeUYUcFffOQrIIsgPv93B35tTR3NUIB9S3U56FRjufOM9QwdDXYY7Q7YTr7YtIyD
-            nZzlD9NhPXdLP00S2gaZiYvLiUALIjmGCStwjamuprcc/c+VewGLcYpWsfRS0/GN
-            UWAPFTFGOy8mGWZNTm68i7841CeASwRk5QiE5lhw6AZ6NzXaZS8LZsKXR5LIivM8
-            TetKgc0JCsdbmWzx8B/u1VC4OJqI/RASzQOLek1UfjmLzL97XrvRNJu6MRQG4lub
-            ygSqmNw2022OSGUKsKYr8OQbAKN7m7G7XuN87yzmobFxAw+F7bvltCr4J7uzsVpi
-            OA9OHI49LA0p8rHerzSSsCUxJGl3qh9prJ00Dj2H9Gx7Kmro0L//c4enTQV0rALU
-            ZgEJAhX1D/QQWdeCeWKe/+87rha6IgMEDBzoWvLKbj1uqQOYRIeipfImGYNbTpBY
-            6o1Hc701jfaXP/y0aPW+lbIpP4P9kGfEd6orsYe/QAfF99+Mq4N3c+xVF8j+R37R
-            AXaNrzVu/g==
-            =3JHv
-            -----END PGP MESSAGE-----
-          fp: 297FED771E7CCA73A7E36A8DCB445BC561D54D26
-        - created_at: "2021-10-23T01:29:40Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMA9ce7oIX8WL2AQ/+NRIZstLEkbeipntho75mV4DrHDcsQQ8BjTHZ7Ka4WJjo
-            n+3HkR9p+TOETeYNOb35nBJQCVvA8+USxIbw62P1VvcCxVOjxvVcgNVaPJhIZCzj
-            uQz6g38kMFgsn0F58vi3Cuk0F00vBnb6ysVlUiL93FCqnNiCqFf/uuX9+BgXDMCj
-            msC01wKxIdnkAvReXqavjgdtgXCpCifGkx30Wg11slBy4Gam4irfRm8d6tQrl5QT
-            gnSElYjp22a3Fm79y2AylmhxNCVGypDsccZckXfw7L2v7G1IbqTKHQgvXB8Ch1QR
-            WD/bCuTrfQaJimRquacxIRh4CYh5r0QEVuop7PwkVPzC2+o73gduiqSQXOMT5css
-            11SyOLgufL0AOOwqgnSQGcg+5714YkgHVPIRgHwwEFMSzPmLgmmQFt3g+qkC16Dr
-            yfWxVpOtpLPI+FpVJfcVmmqY5TnX8k549Jgqs08ZRey6zvH2G+u1xw5Oj/lJqFTf
-            SBRu1ZvnNxbG8isDCUsaW2AD7/qhz+QQ3agmbsVMrNuSjwzfk7ixNOo9MpKTPWAr
-            M8eLXgN9zX/zHDJdlsUOlwUfS61MY5cgAyI0IGjmib26VKErAjKiOccRlAZyxRKd
-            V6oKlTH+p7FRhwJ4gXTw89Hb9tiSLnyKTQN1uDLGQhR/0W355ggiD4PKuekg4tbU
-            ZgEJAhVdWP9bBN+L6NHzKcNwFnPWi+yROpuDGKvsQ5jbb+H218t7Rqty6AF7Cq9g
-            10Mkv76LQMAAvZYpFUbugG8uIe0h3fppJh6Wbl5yOoGhFOdjxfxb7+XK0EHCEVQD
-            m3WCzhodYA==
-            =zSu5
-            -----END PGP MESSAGE-----
-          fp: 28FAE7DBB9F187A6D1956F6150163F0A471743F3
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxL0dEMUNEYTJsZXhSR1FI
+            eTExWTVRazJuWlRLNjRsSkY0MnNENkNkZUNrCms2RjZvajRPUURpbmhoWWdSNjhU
+            TmVVbm91aUhOWTRBN2Q4ZVNUbnJickkKLS0tIDZKZk1jcFJCZlUxSTFLODAvcTA5
+            aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
+            dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-05-10T23:46:38Z"
+    mac: ENC[AES256_GCM,data:8VmH/DEj4Z5dF00k3HDpObskk/WsZ3i+DLg/zjFefUr7eWw8IyTqfqtcJR+oMRbZX1ymil//uxKq2dCEEoqjqjKgoO+9JWgp2bebarASVcsXffDQonkgAASHjOC3TTtSJbOW//YLc7w6pGpQv4Z0QzEcQBiHmZyiJPo3ootblRQ=,iv:DrH7IxjhesBEhajRufl6yFCBwT8rpJEvNWn3xtkaBUA=,tag:0YgiiePJhXi6HIIGp2mvDA==,type:str]
+    pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
