openebs cstor initial setup

--- a/provision/ansible/roles/ubuntu/tasks/packages.yml
+++ b/provision/ansible/roles/ubuntu/tasks/packages.yml
@@ -74,3 +74,9 @@
     daemon_reload: true
     enabled: true
     state: restarted
+
+- name: Enable iSCSI service for OpenEBS
+  ansible.builtin.systemd:
+    name: iscsid
+    state: started
+    enabled: yes
