--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
       enabled: true
       ingressClassName: "traefik"
       annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        #cert-manager.io/cluster-issuer: "letsencrypt-production"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         external-dns/is-public: "true"
         hajimari.io/enable: "true"
@@ -39,10 +39,10 @@ spec:
         - host: "echo-server.${SECRET_DOMAIN}"
           paths:
             - "/"
-      tls:
-        - secretName: echo-server-tls
-          hosts:
-            - "echo-server.${SECRET_DOMAIN}"
+      #tls:
+      #  - secretName: echo-server-tls
+      #    hosts:
+      #      - "echo-server.${SECRET_DOMAIN}"
     resources:
       requests:
         cpu: 50m
