--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ metadata:
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
+    SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:amw5fR0CqMMtJS38VLV7TxjXxzCQQbWkk2E=,iv:ZBvDAhCVWJG0T0G6QgK+j346R/z9p16MiShec+azdX8=,tag:g6DAAWHsC1q8XWHuxw8wWw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-10T23:46:38Z"
-    mac: ENC[AES256_GCM,data:8VmH/DEj4Z5dF00k3HDpObskk/WsZ3i+DLg/zjFefUr7eWw8IyTqfqtcJR+oMRbZX1ymil//uxKq2dCEEoqjqjKgoO+9JWgp2bebarASVcsXffDQonkgAASHjOC3TTtSJbOW//YLc7w6pGpQv4Z0QzEcQBiHmZyiJPo3ootblRQ=,iv:DrH7IxjhesBEhajRufl6yFCBwT8rpJEvNWn3xtkaBUA=,tag:0YgiiePJhXi6HIIGp2mvDA==,type:str]
+    lastmodified: "2022-05-13T03:40:51Z"
+    mac: ENC[AES256_GCM,data:J8rGe+DabPtXd3B+nTN2OeNjdLnHGsRvKdxD2TJ1vkFU+C5EEbOkPVSBrc91K2GnKFdY6wBAhPsS9rBbACjJyhbsKhWvuMJFNlhlrom7koz6SABpEVk9KGKDeYeiO6stzS8kIXshgyuW2nwbtNh+nO4IRpK3A2tbZVowe09sqT4=,iv:hdRpOSlISYVabWHz2Z9LTfXAU/AzHoZEMAOk7Yb5ug4=,tag:3B5ZRIL9vze4QX4CEBdomg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
