--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -5,5 +5,8 @@ metadata:
   name: cluster-settings
   namespace: flux-system
 data:
+  TIMEZONE: America/Chicago
   METALLB_LB_RANGE: 192.168.2.180-192.168.2.190
   METALLB_TRAEFIK_ADDR: 192.168.2.180
+  METALLB_PLEX_ADDR: 192.168.2.181
+  NAS_ADDR: 192.168.2.10
