--- a/cluster/apps/media/nzbget/helm-release.yaml
+++ b/cluster/apps/media/nzbget/helm-release.yaml
@@ -23,11 +23,11 @@ spec:
       tag: v21.1
     env:
       TZ: "${TIMEZONE}"
-    #podSecurityContext:
-    #  runAsUser: 568
-    #  runAsGroup: 568
-    #  fsGroup: 568
-    #  fsGroupChangePolicy: "OnRootMismatch"
+    podSecurityContext:
+      runAsUser: 568
+      runAsGroup: 568
+      fsGroup: 568
+      fsGroupChangePolicy: "OnRootMismatch"
     ingress:
       main:
         enabled: true
