--- a/cluster/apps/media/sonarr/kustomization.yaml
+++ b/cluster/apps/media/sonarr/kustomization.yaml
@@ -2,8 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - nfs-media-pv.yaml
-  - nzbget
-  - plex
-  - radarr
-  - sonarr
+  #- config-pvc.yaml
+  - helm-release.yaml
