--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -9,4 +9,5 @@ data:
   METALLB_LB_RANGE: 192.168.2.180-192.168.2.190
   METALLB_TRAEFIK_ADDR: 192.168.2.180
   METALLB_PLEX_ADDR: 192.168.2.181
+  METALLB_HOME_ASSISTANT_ADDR: 192.168.2.182
   NAS_ADDR: 192.168.2.10
