--- a/cluster/apps/home/home-assistant/secret.sops.yaml
+++ b/cluster/apps/home/home-assistant/secret.sops.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cluster-secrets
-    namespace: flux-system
+    name: home-assistant-secrets
+    namespace: home
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
-    SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:uekA7Tvb8EsGAaKyrG4HfR49OkAzKE5JS0w=,iv:Mh3fLX+knG82Ep8zyDeUVMCgsMSMsW1w2iN1w5NsgAk=,tag:KMoBkabdFkQ98MSn5U06Rw==,type:str]
+    HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:zSor5KqeK2c=,iv:E0GHiMTOVQxw/KktDnI2z3gWCoj0vI3hTbU+RE9rmxM=,tag:sfotdOx49omBpHaDuR12wA==,type:float]
+    HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:/SBol+veVRwL,iv:YS441s3dA8XBFe9r1z9lYBPgV83QtQIl650b9MNvrM8=,tag:3YLw3O6kTPrlQF5KCuRfqg==,type:float]
+    HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:Z4eO,iv:IFMMWM8ObYxT46pbsQoYkRokLqqbrJSj+sIkELA1Kxo=,tag:TGJgygK5Z2nVhUpAzhm5fA==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-13T05:32:23Z"
-    mac: ENC[AES256_GCM,data:RJNvETdReCdUChIPy8PxSayzwp5B3GJqnWazsxM6te5czkIHqxt5snqjWQUK7DHPV/SUXfmarEJxewHRNi+gLyDua6bJUCshHqUY3G5UVoVktR9mMpFCdm/11JDyxtI5JGMnu3nlPSklWd6TUf9C1o4mCPGyJ1z5u6p6scAHbHU=,iv:gss/i7WUUjyR10gdjN3HrYk6dC6En2sazfsjZDjumEc=,tag:9ow+foiME6rkZ+kiWKLfRw==,type:str]
+    lastmodified: "2022-05-16T01:05:17Z"
+    mac: ENC[AES256_GCM,data:uBLxO2sTC+AufpFA0L6mtqxfv8e+4UkM1R9ZH/gIT/SZKBiGAxQP22rVStYeTd2M+6ijXkGBui7sqruAcg8CxGD1x8cuBhoqBsz9Cnx0uIVOyZYEtRarvGCxFa7EJn3dXjDibCxYWPq3Yqlx4Z9laFhUWMwRRo5Pa8v3oIiWRBQ=,iv:5Z9SKpwdcJs1fDqwn0RaNaH23RKEyZaO7sCZQwxNO5c=,tag:YLKWRZiwAhkgGARJoijEMg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
