fix hass secret string

--- a/cluster/apps/home/home-assistant/secret.sops.yaml
+++ b/cluster/apps/home/home-assistant/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     name: home-assistant-secrets
     namespace: home
 stringData:
-    HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:zSor5KqeK2c=,iv:E0GHiMTOVQxw/KktDnI2z3gWCoj0vI3hTbU+RE9rmxM=,tag:sfotdOx49omBpHaDuR12wA==,type:float]
-    HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:/SBol+veVRwL,iv:YS441s3dA8XBFe9r1z9lYBPgV83QtQIl650b9MNvrM8=,tag:3YLw3O6kTPrlQF5KCuRfqg==,type:float]
-    HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:Z4eO,iv:IFMMWM8ObYxT46pbsQoYkRokLqqbrJSj+sIkELA1Kxo=,tag:TGJgygK5Z2nVhUpAzhm5fA==,type:int]
+    HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:1y5MLXwo+EM=,iv:4HmsJ/UjKYGSElqfyL7GvPYnN75pc8p4hX4kRbwBJNs=,tag:1FTsnPTPwe6tcrNZjTkbQA==,type:str]
+    HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:f4OCDTC47Zas,iv:iHfDNi4CJ65dOhNvjs9qau6gXKP42kT1dmFO6pUthAQ=,tag:EfokQZb0f7bDgMoebTibIQ==,type:str]
+    HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:0xZf,iv:jDl/V4r1X8O7AVRr8uSo93E9/ZwVyFsOo2y0Ra+ZZ2M=,tag:uQrndY9vl/heyuSnntL3mw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-16T01:05:17Z"
-    mac: ENC[AES256_GCM,data:uBLxO2sTC+AufpFA0L6mtqxfv8e+4UkM1R9ZH/gIT/SZKBiGAxQP22rVStYeTd2M+6ijXkGBui7sqruAcg8CxGD1x8cuBhoqBsz9Cnx0uIVOyZYEtRarvGCxFa7EJn3dXjDibCxYWPq3Yqlx4Z9laFhUWMwRRo5Pa8v3oIiWRBQ=,iv:5Z9SKpwdcJs1fDqwn0RaNaH23RKEyZaO7sCZQwxNO5c=,tag:YLKWRZiwAhkgGARJoijEMg==,type:str]
+    lastmodified: "2022-05-16T01:10:12Z"
+    mac: ENC[AES256_GCM,data:3fMSPKD2IfMAvNmzGP51lzVmgX4CJP1py3u3kiH5aM6tiajfGAOFGBL+pJd0Uulw3pLc65POWsb3rMxqZjrofpDecDwKAZBM6Yr0t8z2sBCp8Evg7sG7PHPPLLwyCwHVHEd5YDDIz6iUp3rPzpVOJyWeZpOoBLQWpLF3ByEWrNo=,iv:U00iFGMlFoNIKfaUxaaz4qMNVo7Gqcn2dGW169UjuP4=,tag:Yg6gPerP9eBvSyyumRdw4A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
