--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -10,4 +10,5 @@ data:
   METALLB_TRAEFIK_ADDR: 192.168.2.180
   METALLB_PLEX_ADDR: 192.168.2.181
   METALLB_HOME_ASSISTANT_ADDR: 192.168.2.182
+  METALLB_EMQX_ADDR: 192.168.2.183
   NAS_ADDR: 192.168.2.10
