--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - descheduler-charts.yaml
   - ealenn-charts.yaml
   - emberstack-charts.yaml
+  - emqx-charts.yaml
   - external-dns-charts.yaml
   - grafana-charts.yaml
   - hajimari-charts.yaml
