--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -8,8 +8,8 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: kah-common-chart
-      version: 1.1.2
+      chart: zwavejs2mqtt
+      version: 5.0.2
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
