--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -2,17 +2,19 @@ kubernetes:
   children:
     master:
       hosts:
-        k3s-master-0:
+        k3s-master-0: #VM
           ansible_host: 192.168.2.85
-        k3s-master-1:
+        k3s-master-1: #VM
           ansible_host: 192.168.2.86
-        k3s-master-2:
+        k3s-master-2: #T630
           ansible_host: 192.168.2.77
     worker:
       hosts:
-        k3s-node-1:
+        k3s-node-0: #VM
+          ansible_host: 192.168.2.84
+        k3s-node-1: #VM
           ansible_host: 192.168.2.87
-        k3s-node-2:
+        k3s-node-2: #T630
           ansible_host: 192.168.2.75
-        k3s-node-3:
+        k3s-node-3: #T630
           ansible_host: 192.168.2.76
