--- a/cluster/core/namespaces/monitoring.yaml
+++ b/cluster/core/namespaces/monitoring.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: media
+  name: monitoring
   labels:
     goldilocks.fairwinds.com/enabled: "true"
