fix goldilocks resources

--- a/cluster/apps/monitoring/goldilocks/helm-release.yaml
+++ b/cluster/apps/monitoring/goldilocks/helm-release.yaml
@@ -27,9 +27,9 @@ spec:
       resources:
         requests:
           cpu: 100m
-          memory: 64M
+          memory: 64Mi
         limits:
-          memory: 250M
+          memory: 250Mi
     dashboard:
       replicaCount: 1
       ingress:
@@ -48,4 +48,4 @@ spec:
           cpu: 100m
           memory: 64Mi
         limits:
-          memory: 100M
+          memory: 100Mi
