--- a/cluster/apps/monitoring/goldilocks/helm-release.yaml
+++ b/cluster/apps/monitoring/goldilocks/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
           cpu: 100m
           memory: 64Mi
         limits:
+          cpu: 100m
           memory: 250Mi
     dashboard:
       replicaCount: 1
@@ -48,4 +49,5 @@ spec:
           cpu: 100m
           memory: 64Mi
         limits:
+          cpu: 100m
           memory: 100Mi
