--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
     remediation:
       retries: 5
   values:
+    fullnameOverride: prom-stack
     alertmanager:
       config:
         global:
@@ -112,6 +113,8 @@ spec:
               resources:
                 requests:
                   storage: 250Mi
+            metadata:
+              name: alert
     kube-state-metrics:
       metricLabelsAllowlist:
         - "persistentvolumeclaims=[*]"
@@ -229,6 +232,8 @@ spec:
               resources:
                 requests:
                   storage: 10Gi
+            metadata:
+              name: prom
         thanos:
           image: quay.io/thanos/thanos:v0.26.0
           # renovate: datasource=docker depName=quay.io/thanos/thanos
