comment out thanos

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -200,19 +200,19 @@ spec:
           traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
         hosts:
           - "prometheus.${SECRET_DOMAIN}"
-      thanosService:
-        enabled: true
-      thanosServiceMonitor:
-        enabled: true
-      thanosIngress:
-        enabled: true
-        pathType: Prefix
-        ingressClassName: "traefik"
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
-        hosts:
-          - "thanos-sidecar.${SECRET_DOMAIN}"
+      #thanosService:
+      #  enabled: true
+      #thanosServiceMonitor:
+      #  enabled: true
+      #thanosIngress:
+      #  enabled: true
+      #  pathType: Prefix
+      #  ingressClassName: "traefik"
+      #  annotations:
+      #    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+      #    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
+      #  hosts:
+      #    - "thanos-sidecar.${SECRET_DOMAIN}"
       prometheusSpec:
         replicas: 2
         replicaExternalLabelName: "replica"
@@ -234,13 +234,13 @@ spec:
                   storage: 10Gi
             metadata:
               name: prom
-        thanos:
-          image: quay.io/thanos/thanos:v0.26.0
-          # renovate: datasource=docker depName=quay.io/thanos/thanos
-          version: "v0.26.0"
-          #objectStorageConfig:
-          #  name: thanos-objstore-secret
-          #  key: objstore.yml
+        #thanos:
+        #  image: quay.io/thanos/thanos:v0.26.0
+        #  # renovate: datasource=docker depName=quay.io/thanos/thanos
+        #  version: "v0.26.0"
+        #  #objectStorageConfig:
+        #  #  name: thanos-objstore-secret
+        #  #  key: objstore.yml
         resources:
           requests:
             cpu: 500m
