--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -158,7 +158,7 @@ spec:
         targetPort: 10252
       serviceMonitor:
         enabled: true
-        https: true
+        https: false
         insecureSkipVerify: true
     kubeScheduler:
       enabled: true
@@ -172,7 +172,7 @@ spec:
         targetPort: 10251
       serviceMonitor:
         enabled: true
-        https: true
+        https: false
         insecureSkipVerify: true
     kubeProxy:
       enabled: true
