--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
       hosts:
-        - host: "loki.${SECRET_DOMAIN}"
+        - "grafana.${SECRET_DOMAIN}"
     persistence:
       enabled: true
       # type: statefulset
