--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -11,4 +11,5 @@ data:
   METALLB_PLEX_ADDR: 192.168.2.181
   METALLB_HOME_ASSISTANT_ADDR: 192.168.2.182
   METALLB_EMQX_ADDR: 192.168.2.183
+  METALLB_SYSLOG_ADDR: 192.168.2.184
   NAS_ADDR: 192.168.2.10
