--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - fairwinds-charts.yaml
   - grafana-charts.yaml
   - hajimari-charts.yaml
+  - influxdata-charts.yaml
   - infracloudio-charts.yaml
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
