--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -97,7 +97,7 @@ spec:
           - name: InfluxDB
             type: influxdb
             access: proxy
-            url: http://influxdb.monitoring.svc.cluster.local:8086
+            url: http://influxdb:8086
           - name: Prometheus
             type: prometheus
             access: proxy
