add s3/minio keys

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,6 +8,8 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
     SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:uekA7Tvb8EsGAaKyrG4HfR49OkAzKE5JS0w=,iv:Mh3fLX+knG82Ep8zyDeUVMCgsMSMsW1w2iN1w5NsgAk=,tag:KMoBkabdFkQ98MSn5U06Rw==,type:str]
+    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:3iY4gng=,iv:dtue/HqxpH545PKoxB8aAfgiGKXzyXvFopMgFlo78fA=,tag:LeKi4Dbd3U2UnG3ip5JUMg==,type:str]
+    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:pdqk1RCffW03Ikyb7g1qLC+ugSM=,iv:bo6OLDUaC84dqajUX7WiQXFfTXOzdhQ2xZ5Ztz3X6Pk=,tag:BvyZOhrNmAojKQ+5AX25PQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +25,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-13T05:32:23Z"
-    mac: ENC[AES256_GCM,data:RJNvETdReCdUChIPy8PxSayzwp5B3GJqnWazsxM6te5czkIHqxt5snqjWQUK7DHPV/SUXfmarEJxewHRNi+gLyDua6bJUCshHqUY3G5UVoVktR9mMpFCdm/11JDyxtI5JGMnu3nlPSklWd6TUf9C1o4mCPGyJ1z5u6p6scAHbHU=,iv:gss/i7WUUjyR10gdjN3HrYk6dC6En2sazfsjZDjumEc=,tag:9ow+foiME6rkZ+kiWKLfRw==,type:str]
+    lastmodified: "2022-05-19T18:28:31Z"
+    mac: ENC[AES256_GCM,data:lcB4FjASUrBqlts3Em6/LkdJWsBc7BPjTk9yN1lRQfD4apcgEYuGkkCDYZOhkwPZBBgQijwg/s4LHNH+8c4FMOyTRDxbTWTQpDbYVVU0nvibotmidWX0C6UsDU8uppGo6auQ9dYr6ejFKPa31Tum6ghpLZw8HQjU6wOcsPI9Rsw=,iv:pEuY6qBuxFj9GjJFysGLvv+v1JM3uhlYqB/eZDVC+DM=,tag:qa4vRVdVbj5xswuVP/8TLg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
