--- a/cluster/apps/security/authentik/secret.sops.yaml
+++ b/cluster/apps/security/authentik/secret.sops.yaml
@@ -6,14 +6,14 @@ metadata:
     namespace: security
 stringData:
     AUTHENTIK_EMAIL__HOST: ENC[AES256_GCM,data:f18BrCNMmqxu9eTketc=,iv:hqWmwpK/lNx9U697DLm1LTlAdcWputytqggxYYu6W28=,tag:IQ5onYZXMaG1EERRotmhCA==,type:str]
-    AUTHENTIK_EMAIL__PORT: ENC[AES256_GCM,data:sfUo,iv:rQHwvhYgXqvP4/oRiyuAi5bWn38GWXIQOnd2AxhoKVY=,tag:SfaBLJWGDaWxRWYJNbicQQ==,type:int]
+    AUTHENTIK_EMAIL__PORT: ENC[AES256_GCM,data:pl4V,iv:yHwjcyERqSEsvGgfvZAtVztEcdvw14q/rcdd67v9fjc=,tag:7jFFSqliifRTgK0e/OWH+g==,type:str]
     AUTHENTIK_EMAIL__USERNAME: ENC[AES256_GCM,data:XAosJEoyXcuT9o35XC3Eoj2LwD0ap+RX,iv:b5a2kF2M0lIJHPJkhPoEd726OVAWFbVwj0hEZMJ3vIE=,tag:cJF97Pi7f28nBBa0xde7Zg==,type:str]
     AUTHENTIK_EMAIL__PASSWORD: ENC[AES256_GCM,data:4r9CzSdf7D32tkufjUQRuw==,iv:PgBRo5M30IzuLbXf+waXq1zCzj3ff/VewR7QJEArVwU=,tag:TNd15Ks0wSC4RMsWEsu4CA==,type:str]
     AUTHENTIK_EMAIL__USE_TLS: ENC[AES256_GCM,data:+usZuw==,iv:Q22fJF1Xeih5sPRZO1DOf9BRwVZkKxLu28spIWcrr84=,tag:B8xLKGcE1fNPCbAj3AY0/Q==,type:bool]
     AUTHENTIK_EMAIL__FROM: ENC[AES256_GCM,data:aFo7cCJT6SWq1/OWJZpienWfnxn+4y/cmyGYTg==,iv:zJ2HJHusOYbe4xfP9xzdlew+5fcFxyrKdXJhF1Z6fWw=,tag:8pihv62+nrNzKwEF8Q4p8w==,type:str]
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:k67wogYdKREGifW7KSPHXkGn108yWig2bkjW59+sHrcCQ2Llix8c/45vMQdSZekI,iv:b0wBOHLGqrp0ebQCDZzNjIO84cKPGEnozP34yufOAlQ=,tag:m1jN+N7NTeCbfo8DDXccmg==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:MNd4A2K7MngotgVA7Mip4Vaa55NyBe5b8qWYP1m56NIc/A==,iv:Ci3b/OjLAVRElfQLPohUURbYzwS59zx/JcvtMp3jbjU=,tag:Bq+IC0huaFGbbNJi8vTjbA==,type:str]
-    AUTHENTIK_GEOIP_ACCOUNT_ID: ENC[AES256_GCM,data:8Eim9Jmf,iv:mg59OSNDGU62cTZy0Gx+Pls1HDnpo1GfVBxDmlTfBlw=,tag:GceQ2kIpd7qo3yhJiXjrPg==,type:int]
+    AUTHENTIK_GEOIP_ACCOUNT_ID: ENC[AES256_GCM,data:JjA4LtXW,iv:pw1AeLYOXynoX2elxyafG5MSqPP3OTikekVcGQ3eHNQ=,tag:FW5o7bvz3/OoB9mPvj6GhQ==,type:str]
     AUTHENTIK_GEOIP_LICENSE_KEY: ENC[AES256_GCM,data:FvFkhs7qC0TIopfxkkVTgw==,iv:BDOtDSPIB2atjkqaA1sdii06ue+CF3iRxDx1nXq7UjQ=,tag:6YTph24srTSzYQ1kyVKosQ==,type:str]
 sops:
     kms: []
@@ -30,8 +30,8 @@ sops:
             UDZ6YTBOb2ltT2lNTzJxUzFBWUVxeXMK2bO0I1cpUK/nSH0E48mciSdrgw4V9qAd
             qFJllHDtZEO9nYl3kt1CLQ1EFGo0ANoLqBnGwqj1Zp6RIJxF+fM8aw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-19T19:31:14Z"
-    mac: ENC[AES256_GCM,data:oRGctx0Zc6h5zSpZNAnsBLZ5V9BReN/F3LwjvV+AVZYPksGtkjhf2qDpFF9Hd+42vhs5hz+mrKJasUOU1ZGuT947HF5efOMWpkHFNlT68XIQY9nHYQmhwEVAFyqJHHUt7YMijoVBJziMkNho48MGritwzNCkrdu8DVOtFEsnRX8=,iv:LIBRLKLYPz7eBFain5ziwAFz5FrSlxpdhkwobcxRClU=,tag:4eFh0NuKOuKztsf7gXUyOw==,type:str]
+    lastmodified: "2022-05-19T19:42:35Z"
+    mac: ENC[AES256_GCM,data:d05/9bNC5BenIpKmnE4l6iXpF4IvfiWKhLxo3Jxf2BTSg9RIIP3hcdIXN48OXqgTQoTVvOkLa5ub9nOmVgYwpLdLXIzdYpswvUyZ8aFptW6DfNlRC7U+n9n3u8i4vEaTrk5QZZcMV2lOfXcdgRHX2jWCo4q3UaAR0DLhuEZzUtY=,iv:9NndLj+4L+80sZ6ND/3IblRTGk1+6gPAmzSOqdBAs6o=,tag:7OTQ2XvrYDPsAKXLiBxsaQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
