--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -3,9 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager.yaml
+  - home.yaml
+  - media.yaml
   - metallb-system.yaml
   - monitoring.yaml
   - networking.yaml
   - openebs.yaml
-  - home.yaml
-  - media.yaml
+  - security.yaml
