quote true in secrets

--- a/cluster/apps/security/authentik/secret.sops.yaml
+++ b/cluster/apps/security/authentik/secret.sops.yaml
@@ -9,7 +9,7 @@ stringData:
     AUTHENTIK_EMAIL__PORT: ENC[AES256_GCM,data:pl4V,iv:yHwjcyERqSEsvGgfvZAtVztEcdvw14q/rcdd67v9fjc=,tag:7jFFSqliifRTgK0e/OWH+g==,type:str]
     AUTHENTIK_EMAIL__USERNAME: ENC[AES256_GCM,data:XAosJEoyXcuT9o35XC3Eoj2LwD0ap+RX,iv:b5a2kF2M0lIJHPJkhPoEd726OVAWFbVwj0hEZMJ3vIE=,tag:cJF97Pi7f28nBBa0xde7Zg==,type:str]
     AUTHENTIK_EMAIL__PASSWORD: ENC[AES256_GCM,data:4r9CzSdf7D32tkufjUQRuw==,iv:PgBRo5M30IzuLbXf+waXq1zCzj3ff/VewR7QJEArVwU=,tag:TNd15Ks0wSC4RMsWEsu4CA==,type:str]
-    AUTHENTIK_EMAIL__USE_TLS: ENC[AES256_GCM,data:+usZuw==,iv:Q22fJF1Xeih5sPRZO1DOf9BRwVZkKxLu28spIWcrr84=,tag:B8xLKGcE1fNPCbAj3AY0/Q==,type:bool]
+    AUTHENTIK_EMAIL__USE_TLS: ENC[AES256_GCM,data:caj0aQ==,iv:rw4k21Iid6BLPODK8qiGBzumWarD+N7RT5M9P9JlfD4=,tag:SONIjoSN/kw28gPByP34ug==,type:str]
     AUTHENTIK_EMAIL__FROM: ENC[AES256_GCM,data:aFo7cCJT6SWq1/OWJZpienWfnxn+4y/cmyGYTg==,iv:zJ2HJHusOYbe4xfP9xzdlew+5fcFxyrKdXJhF1Z6fWw=,tag:8pihv62+nrNzKwEF8Q4p8w==,type:str]
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:k67wogYdKREGifW7KSPHXkGn108yWig2bkjW59+sHrcCQ2Llix8c/45vMQdSZekI,iv:b0wBOHLGqrp0ebQCDZzNjIO84cKPGEnozP34yufOAlQ=,tag:m1jN+N7NTeCbfo8DDXccmg==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:MNd4A2K7MngotgVA7Mip4Vaa55NyBe5b8qWYP1m56NIc/A==,iv:Ci3b/OjLAVRElfQLPohUURbYzwS59zx/JcvtMp3jbjU=,tag:Bq+IC0huaFGbbNJi8vTjbA==,type:str]
@@ -30,8 +30,8 @@ sops:
             UDZ6YTBOb2ltT2lNTzJxUzFBWUVxeXMK2bO0I1cpUK/nSH0E48mciSdrgw4V9qAd
             qFJllHDtZEO9nYl3kt1CLQ1EFGo0ANoLqBnGwqj1Zp6RIJxF+fM8aw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-19T19:42:35Z"
-    mac: ENC[AES256_GCM,data:d05/9bNC5BenIpKmnE4l6iXpF4IvfiWKhLxo3Jxf2BTSg9RIIP3hcdIXN48OXqgTQoTVvOkLa5ub9nOmVgYwpLdLXIzdYpswvUyZ8aFptW6DfNlRC7U+n9n3u8i4vEaTrk5QZZcMV2lOfXcdgRHX2jWCo4q3UaAR0DLhuEZzUtY=,iv:9NndLj+4L+80sZ6ND/3IblRTGk1+6gPAmzSOqdBAs6o=,tag:7OTQ2XvrYDPsAKXLiBxsaQ==,type:str]
+    lastmodified: "2022-05-19T19:46:09Z"
+    mac: ENC[AES256_GCM,data:WgrnB1FeytAacA8wGEXf69fpQ+18ayyt2AmfMeULLwnpnsqozI+UIUgqRuZFtzwvOvcZtI+oMPo4K2jTBQt/aOp3UvSLRVsyc61uQXCz0ryW7JRFxqrCqtX8uHdgWs36lqewOC9kTlpkcwNiNiy+Ah5Oz1wQsvG4WMy/hCZiof0=,iv:FJkYL2q2Rv8/XSFqLoG8Po7CctDDfpe4LHxjitWbyr0=,tag:Eth3wh1ZXrZi0eolKaRznA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
