--- a/cluster/apps/security/authentik/secret-authentik-postgresql.sops.yaml
+++ b/cluster/apps/security/authentik/secret-authentik-postgresql.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: authentik-postgresql
     namespace: security
 stringData:
-    postgresql-postgres-password: ENC[AES256_GCM,data:3cLzy/JuzC5zJcNX4GAZBZol9H9y+YG2Kqzr20fmNV7jIs2a0xiBXZK18eBUoGuk,iv:wBW1i1TkQkXtp4cmZzduhumJ7vb1kG4XStKLshf3rdY=,tag:FVphf9tOOWY7PQp5YOeL3A==,type:str]
-    postgresql-password: ENC[AES256_GCM,data:0eQsiKGMSL/d00di58jUraPUHUvPX0scdWRXVuQ86DKS9Q==,iv:9x/x4qcLVNwrzv+YaWb9jkLGujJdGAi7QnXcS2neAb0=,tag:VstWkHE0CQ502ltLBJKcmg==,type:str]
+    postgres-password: ENC[AES256_GCM,data:sfkWXAh2r6yZCgCTke7eKAhJY79W8TVgDabXmfgxogNx6eQmy/PHLKskxYQm75Kz,iv:mWKXtzEogGi4eyJRrkjeZ8O4HAEkwm0swhNZ6/OUgpI=,tag:oppS2P9Nh3WT4lo9gARybA==,type:str]
+    password: ENC[AES256_GCM,data:OYIbnp56MMmCy9ev77wTJBkBs/5zu9ZRppn74yGkkdDVxg==,iv:+fZM6TY6kQiAMzlTJq6jet0w4WXIjhvLTOtRMqwnJaE=,tag:ToefI3Fut+3TF2VQugk3PQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             UDZ6YTBOb2ltT2lNTzJxUzFBWUVxeXMK2bO0I1cpUK/nSH0E48mciSdrgw4V9qAd
             qFJllHDtZEO9nYl3kt1CLQ1EFGo0ANoLqBnGwqj1Zp6RIJxF+fM8aw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-19T22:08:36Z"
-    mac: ENC[AES256_GCM,data:qwYkUKMFXwIRUCUvrOdKS19kMxZk6Kps74/i6OsLi9NbCl7CkKWjBYpGwo/UKeBRfQwQsUCsMJ759aAxiijpsE0eIn2783E2dzgPGyfzmp1k2T4diGNdxJqsmTNgTA5+O3h3YU1CFoigCTqXHbRXPWmiV26XfNzzx0Vq+h0eLkI=,iv:8R/jnqz0QY+3tUF1OrzzwGR0K4DCxNtIvPbO24T1cX8=,tag:1dvFEjzlSzhwCulk2n4gmg==,type:str]
+    lastmodified: "2022-05-19T22:34:02Z"
+    mac: ENC[AES256_GCM,data:prMr+XkGx2YVAKXLYmupNqIAO+1eVk5kV1srySH/tBCwe/DaL90C8VLJKgaOpaoczuaxxkbiubFwQRx8n4/DyEAvA9mSbb52ah9iZ0C+N7uzHLKNpHCxW60UbTwaFW0Kn5wVH4K4wY2fn22TsuV0/8yICvXRe6Us5sqxOQhsNZk=,iv:STtdcvks3XKTmAi+M40VPvb4zmEnky/xH5LL/ZQNPA0=,tag:W78LwN9oEvFlOD+WnW9NtA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
