--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
       enabled: true
       ingressClassName: "traefik"
       annotations:
-        #cert-manager.io/cluster-issuer: "letsencrypt-production"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         external-dns/is-public: "true"
         hajimari.io/enable: "true"
@@ -36,13 +36,16 @@ spec:
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
       hosts:
+        - host: "echo-server.${SECRET_ROOT_DOMAIN}"
+          paths:
+            - "/"
         - host: "echo-server.${SECRET_DOMAIN}"
           paths:
             - "/"
-      #tls:
-      #  - secretName: echo-server-tls
-      #    hosts:
-      #      - "echo-server.${SECRET_DOMAIN}"
+      tls:
+        - secretName: echo-server-tls
+          hosts:
+            - "echo-server.${SECRET_ROOT_DOMAIN}"
     resources:
       requests:
         cpu: 50m
