--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
             name: cloudflare-api-token
             key: api-token
     extraArgs:
-      - --cloudflare-proxied
+      #- --cloudflare-proxied
       - --annotation-filter=external-dns/is-public in (true)
     policy: sync
     sources:
@@ -36,7 +36,7 @@ spec:
     txtPrefix: "k3s."
     txtOwnerId: "default"
     domainFilters:
-      - "${SECRET_DOMAIN}"
+      - "${SECRET_ROOT_DOMAIN}"
     resources:
       requests:
         memory: 100Mi
