--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
+    SECRET_ROOT_DOMAIN: ENC[AES256_GCM,data:Eg1+1RvfhpXoIFLXCnRVe7+A,iv:6VXFs5mvC+Aa75FA5GcRhU6nvME5fQQYqeHnkFE/03Y=,tag:UkoQTIeT88JuZ4TO7i97qg==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
     SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:uekA7Tvb8EsGAaKyrG4HfR49OkAzKE5JS0w=,iv:Mh3fLX+knG82Ep8zyDeUVMCgsMSMsW1w2iN1w5NsgAk=,tag:KMoBkabdFkQ98MSn5U06Rw==,type:str]
@@ -25,8 +26,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-19T18:28:31Z"
-    mac: ENC[AES256_GCM,data:lcB4FjASUrBqlts3Em6/LkdJWsBc7BPjTk9yN1lRQfD4apcgEYuGkkCDYZOhkwPZBBgQijwg/s4LHNH+8c4FMOyTRDxbTWTQpDbYVVU0nvibotmidWX0C6UsDU8uppGo6auQ9dYr6ejFKPa31Tum6ghpLZw8HQjU6wOcsPI9Rsw=,iv:pEuY6qBuxFj9GjJFysGLvv+v1JM3uhlYqB/eZDVC+DM=,tag:qa4vRVdVbj5xswuVP/8TLg==,type:str]
+    lastmodified: "2022-05-20T17:55:01Z"
+    mac: ENC[AES256_GCM,data:J7ILXXnO3TQOu+dtpEKlvfYlxQ5RbJjfqokm3ujVWDh7aeSddeXN3W7bnNO4oTnTjnE4Clsjf3IGdnAzSRrTi1YynDW4Fa0T6naHMSfZF2L9eN6uEkEapIPwrh9HIvhWUGo7+U8UqW/7NtcXkcmFqbUfrrBcUlsZ+0moD2Up13E=,iv:8lri8toP2sD2Snog7NTm5eYRuQqPcHbLXj06DLYClTs=,tag:nQ6ojrYQR2Pu5cn+PwmsSA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
