--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       ingressClassName: "traefik"
       annotations:
         cert-manager.io/cluster-issuer: "letsencrypt-production"
-        external-dns.alpha.kubernetes.io/target: "home.${SECRET_DOMAIN}"
+        external-dns.alpha.kubernetes.io/target: "home.${SECRET_ROOT_DOMAIN}"
         external-dns/is-public: "true"
         hajimari.io/enable: "true"
         hajimari.io/icon: "video-input-antenna"
