--- a/cluster/apps/networking/wildcard-certificate/wildcard-certificate.yaml
+++ b/cluster/apps/networking/wildcard-certificate/wildcard-certificate.yaml
@@ -2,14 +2,16 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN/./-}"
+  name: wildcard-"${SECRET_ROOT_DOMAIN/./-}"
   namespace: networking
 spec:
-  secretName: "${SECRET_DOMAIN/./-}-tls"
+  secretName: "${SECRET_ROOT_DOMAIN/./-}-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: "${SECRET_DOMAIN}"
+  commonName: "${SECRET_ROOT_DOMAIN}"
   dnsNames:
+    - "${SECRET_ROOT_DOMAIN}"
+    - "*.${SECRET_ROOT_DOMAIN}"
     - "${SECRET_DOMAIN}"
     - "*.${SECRET_DOMAIN}"
