--- a/cluster/apps/networking/wildcard-certificate/wildcard-certificate.yaml
+++ b/cluster/apps/networking/wildcard-certificate/wildcard-certificate.yaml
@@ -13,5 +13,5 @@ spec:
   dnsNames:
     - "${SECRET_ROOT_DOMAIN}"
     - "*.${SECRET_ROOT_DOMAIN}"
-    - "${SECRET_DOMAIN}"
+    - "*.home.${SECRET_ROOT_DOMAIN}"
     - "*.${SECRET_DOMAIN}"
